--- a/CentOS/Dockerfile
+++ b/CentOS/Dockerfile
@@ -7,6 +7,7 @@ CMD ["/whatigot.bash"]
 
 RUN yum install -y epel-release
 RUN yum install -y --nogpgcheck\
+    redhat-lsb-core\
     composer\
     docker-client\
     perl-Image-ExifTool\
