Added test script. Updated some version parsing.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,15 +15,4 @@ script:
     sed q <<<"$out" | grep -F "$DIST" &&
     sed '2!d' <<<"$out" | grep -x =\*
 
-  - body=$(sed 1,3d <<<"$out") && echo "$body"
-
-  - |
-    tests=(
-      'MongoDB: \d+\.\d+\.\d+'
-      'NGINX: \d+\.\d+\.\d+'
-    )
-
-    for test in "${tests[@]}"; do
-      grep -Px "$test" <<<"$body"
-      echo $?
-    done
+  - sed 1,3d <<<"$out" | ./test
